src/objects/TASKRAY__trChecklistGroup__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores checklist groupings.</description>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TaskForGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Checklists</relationshipLabel>
        <relationshipName>TaskRay_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the checklist</description>
        <label>Viewable in Public Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__trChecklistGroup__c</referenceTo>
        <relationshipLabel>Cloned Checklists</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Checklist</label>
    <nameField>
        <label>TaskRay Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>